02-ingress/01_ingress_vhosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhosts-blue-green
spec:
  ingressClassName: nginx
  rules:
  - host: blue.user-00.labs.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: svc-blue
            port: 
              number: 8080
  - host: green.user-00.labs.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: svc-green
            port: 
              number: 8080
