02-ingress/03_ingress_fanout_rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-red-yellow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: user-00.labs.sass.ro
    http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: svc-red
            port:
              number: 8081
      - path: /yellow
        pathType: Prefix
        backend:
          service:
            name: svc-yellow
            port:
              number: 8082
