02-ingress/04_ingress_fanout_regexps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: fanout-red-yellow
spec:
  ingressClassName: nginx
  rules:
  - host: user-00.labs.sass.ro
    http:
      paths:
      - path: /red(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-red
            port: 
              number: 8081
      - path: /yellow(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-yellow
            port: 
              number: 8082
