02-ingress/06_ingress_fanout_v2.yml
---
# We still need to serve the static content from somewhere...

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-content
spec:
  ingressClassName: nginx
  rules:
  - host: student.labs.sass.ro
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: svc-red
            port: 
              number: 8081         
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: fanout-red-yellow
spec:
  ingressClassName: nginx
  rules:
  - host: student.labs.sass.ro
    http:
      paths:
      - path: /red(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-red
            port: 
              number: 8081

      - path: /yellow(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-yellow
            port: 
              number: 8082
