02-ingress/08_vhosts_fanout_combined.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: full-green-blue-red-yellow
spec:
  ingressClassName: nginx
  rules:
  - host: student.labs.sass.ro
    http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: svc-red
            port: 
              number: 8081
      - path: /yellow
        pathType: Prefix
        backend:
          service:
            name: svc-yellow
            port: 
              number: 8082
  - host: blue.labs.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-blue
            port:
              number: 8080
  - host: green.labs.sass.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: svc-green
            port: 
              number: 8080
